--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-firebase/app": "^21.13.0",
     "@react-native-firebase/firestore": "^21.13.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
