--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "~7.0.5",
+    "expo-location": "^18.0.10",
     "expo-router": "^4.0.19",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
@@ -42,9 +43,11 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.8",
     "react-native-async-storage": "^0.0.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "^1.20.1",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
