--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-native-firebase/app": "^21.13.0",
     "@react-native-firebase/firestore": "^21.13.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/stack": "^7.2.3",
+    "axios": "^1.8.4",
+    "axois": "^0.0.1-security",
     "expo": "~52.0.42",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
@@ -44,6 +47,7 @@
     "react-native": "0.76.8",
     "react-native-async-storage": "^0.0.1",
     "react-native-dotenv": "^3.4.11",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-maps": "^1.20.1",
@@ -64,7 +68,8 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "@react-native-community/cli": "latest"
   },
   "private": true
 }
